*   Added tempfile crate so we can create temprorary files with ringitems to test. ring_items::read_item. *   Regularized the names of the tests for the new methods in ring_item::RingItem

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 ndhistogram = "0.8.0"
 humantime = "2.1.0"
+tempfile  = "3.3.0"    # For tests that create ring item files.
 
