*   Make main a Rocket main to support an http server. *   Add the histogram server state (join handle and send channel) as A Mutex Wrapped state in rocket because:     -   This prevents the send channel from dropping so the server keeps running.     -    The join handle and the send channel can now be gotten from the processing functions via a State request guard.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ tempfile  = "3.3.0"    # For tests that create ring item files.
 libm = "0.2.6"
 glob = "0.3.1"
 
+[dependencies.rocket]
+version="0.5.0-rc.3"
+features=["json"]
