Add memmap to dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ humantime = "2.1.0"
 tempfile  = "3.3.0"    # For tests that create ring item files.
 libm = "0.2.6"
 glob = "0.3.1"
+memmap = "0.6.2"
 
 [dependencies.rocket]
 version="0.5.0-rc.3"
