--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2021"
 [dependencies]
 ndhistogram = "0.8.0"
 humantime = "2.1.0"
-tempfile  = "3.3.0"    # For tests that create ring item files.
+tempfile  = "3.5.0"    # For tests that create ring item files.
 libm = "0.2.6"
 glob = "0.3.1"
 memmap = "0.6.2"
+dirs = "5.0.0"
 
 [dependencies.rocket]
 version="0.5.0-rc.3"
