--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ glob = "0.3.1"
 memmap = "0.6.2"
 dirs = "5.0.0"
 clap = { version = "4.2.7", features = ["derive"] }
+portman_client="0.2.0"
 
 [dependencies.rocket]
 version="0.5.0-rc.3"
