--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ memmap = "0.6.2"
 dirs = "5.0.0"
 clap = { version = "4.2.7", features = ["derive"] }
 portman_client="0.2.0"
+serde = {version = "1.0.162", features = ["derive"]}
 
 [dependencies.rocket]
 version="0.5.0-rc.3"
