--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ portman_client="0.2.0"
 serde = {version = "1.0.162", features = ["derive"]}
 chrono="0.4.24"
 scan_fmt="0.2.6"
+# For tests that need unique filenames.
+names = {version = "0.14.0", default-features = false}
 
 [dependencies.rocket]
 version="0.5.0-rc.3"
